--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,10 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+    - name: SonarCloud Scan    
+      uses: SonarSource/sonarcloud-github-action@v1.4
+#       with:
+      # Additional arguments to the sonarcloud scanner
+#         args: # optional
+        # Set the sonar.projectBaseDir analysis property
+#         projectBaseDir: # optional, default is .
