--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,16 +23,18 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@v1.4
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   with:
-      #     args: >
-      #       -Dsonar.projectKey=git-workflow-test
-      #       -Dsonar.organization=johnjonathan
-      #       -Dsonar.sources=src/app/
-      #       -Dsonar.test.exclusions=**/*.spec.*
-      #       -Dsonar.tests=src/test/
-      #       -Dsonar.verbose=true
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v1.4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=git-workflow-test
+            -Dsonar.organization=johnjonathan
+            -Dsonar.sources=src/app/
+            -Dsonar.test.inclusions=src/**/*.spec.ts
+            -Dsonar.test.exclusions=**/*.spec.*
+            -Dsonar.tests=src/test/
+            -Dsonar.verbose=true
+            -Dsonar.typescript.lcov.reportPaths=coverage/lcov.info,
+            -Dsonar.testExecutionReportPaths=test-report.xml
