--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,10 @@ jobs:
         node-version: [12.x, 14.x]
 
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -30,6 +34,7 @@ jobs:
         with:
           args: >
             -Dsonar.projectKey=git-workflow-test
+            -Dsonar.branch.name=${{ steps.extract_branch.outputs.branch }}
             -Dsonar.organization=johnjonathan
             -Dsonar.sources=src/app/
             -Dsonar.test.inclusions=src/**/*.spec.ts
