--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@v1.4
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v1.4
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       #   with:
